--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -16,9 +16,11 @@
   <%= form.submit "Search" %>
 <% end %>
 
-<% @available_flights.each do |flight| %>
-  <%= flight.departure_airport.code %>
-  <%= flight.arrival_airport.code %>
-  <%= flight.start_datetime.strftime("%m/%d/%Y") %>
-  <%= flight.flight_duration %>
-<% end %>
+<h3>Availalble Flights</h3>
+
+<%# @available_flights.each do |flight| %>
+  <%# flight.departure_airport.code %>
+  <%# flight.arrival_airport.code %>
+  <%# flight.start_datetime.strftime("%m/%d/%Y") %>
+  <%# flight.flight_duration %>
+<%# end %>
