Modify booking controller, view and model

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -22,4 +22,5 @@ view to set up the sub-forms %>
       <%= passengers_form.text_field :email%>
     </li>
   <% end %>
+  <%= form.submit %>
 <% end %>
