--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,3 +1,4 @@
+<h2>Booking Confirmed!</h2>
 <h3>Flight Information</h3>
 <ul>
   <li><%= @booking.flight.start_datetime.strftime("%a, %b %d, %Y") %>
