Update current WIP

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -30,7 +30,8 @@ Error
   <div data-controller="passenger" data-passenger-count-value="">
     <div data-passenger-target="addition">
     </div>
-    <button type="button" data-action="passenger#add">Add passenger</button>
+    <button type="button" data-action="passenger#add">Add Passenger</button>
+    <button type="button" data-action="passenger#remove">Remove Passenger</button>
   </div>
   <%= form.submit %>
 <% end %>
