--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,23 +1,28 @@
-<h3>Book a Flight</h3>
+<h1 class="title is-1">Book a Flight</h1>
+<i class="fa-brands fa-font-awesome"></i>
+<i class="fa-solid fa-user-secret"></i>
+<i class="fa-regular fa-bell"></i>
 
-<%= form_with scope: :flight, url: flights_url, method: :get do |form| %>
-  <%= form.label :departure_airport_id, "From:" %>
-  <%= form.select(:departure_airport_id, @departure_flight_options, selected: @selected_departure_airport) %>
+<div class="field">
+  <%= form_with scope: :flight, url: flights_url, method: :get do |form| %>
+    <%= form.label :departure_airport_id, "From:", class: 'label' %>
+    <div class="control"><div class="select"><%= form.select(:departure_airport_id, @departure_flight_options, selected: @selected_departure_airport) %></div></div>
   
-  <%= form.label :arrival_airport_id, "To:" %>
-  <%= form.select(:arrival_airport_id, @arrival_flight_options, selected: @selected_arrival_airport) %>
-
-  <%= form.label :date, "Travel Date" %>
-  <%= form.select(:date, @date_options, selected: @selected_date) %>
-
-  <%= form.label :num_tickets, "Select Passengers" %>
-  <%= form.select(:num_tickets, @passenger_options, selected: @passengers) %>
-
-  <%= form.submit "Search" %>
-<% end %>
+    <%= form.label :arrival_airport_id, "To:", class: 'label' %>
+    <div class="control"><div class="select"><%= form.select(:arrival_airport_id, @arrival_flight_options, selected: @selected_arrival_airport) %></div></div>
+  
+    <%= form.label :date, "Travel Date", class: 'label' %>
+    <div class="control"><div class="select"><%= form.select(:date, @date_options, selected: @selected_date) %></div></div>
+  
+    <%= form.label :num_tickets, "Select Passengers", class: 'label' %>
+    <div class="control"><div class="select"><%= form.select(:num_tickets, @passenger_options, selected: @passengers) %></div></div>
+  
+    <div class="control"><%= form.submit "Search", class: 'button is-primary' %></div>
+  <% end %>
+</div>
 
 <% if @available_flights.present? %>
-<h3>Available Flights</h3>
+<h3 class="title is-3">Available Flights</h3>
 <form accept-charset="UTF-8" action=<%= new_booking_path %> method="get">
   <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
   <input id="booking_tickets" name="booking[tickets]" type="hidden" value="<%= @passengers %>">
@@ -33,6 +38,6 @@
     </div>
   <% end %>
   <br>
-  <input type="submit" value="Submit">
+  <div class="control"><input type="submit" value="Submit" class= 'button button is-primary'></div>
 </form>
 <% end %>
