--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -1,43 +1,58 @@
 <h1 class="title is-1">Book a Flight</h1>
-<i class="fa-brands fa-font-awesome"></i>
-<i class="fa-solid fa-user-secret"></i>
-<i class="fa-regular fa-bell"></i>
-
 <div class="field">
   <%= form_with scope: :flight, url: flights_url, method: :get do |form| %>
     <%= form.label :departure_airport_id, "From:", class: 'label' %>
-    <div class="control"><div class="select"><%= form.select(:departure_airport_id, @departure_flight_options, selected: @selected_departure_airport) %></div></div>
-  
+    <div class="control">
+      <div class="select"><%= form.select(:departure_airport_id, @departure_flight_options, selected: @selected_departure_airport) %></div>
+    </div>
     <%= form.label :arrival_airport_id, "To:", class: 'label' %>
-    <div class="control"><div class="select"><%= form.select(:arrival_airport_id, @arrival_flight_options, selected: @selected_arrival_airport) %></div></div>
-  
+    <div class="control">
+      <div class="select"><%= form.select(:arrival_airport_id, @arrival_flight_options, selected: @selected_arrival_airport) %></div>
+    </div>
     <%= form.label :date, "Travel Date", class: 'label' %>
-    <div class="control"><div class="select"><%= form.select(:date, @date_options, selected: @selected_date) %></div></div>
-  
+    <div class="control">
+      <div class="select"><%= form.select(:date, @date_options, selected: @selected_date) %></div>
+    </div>
     <%= form.label :num_tickets, "Select Passengers", class: 'label' %>
-    <div class="control"><div class="select"><%= form.select(:num_tickets, @passenger_options, selected: @passengers) %></div></div>
-  
+    <div class="control">
+      <div class="select"><%= form.select(:num_tickets, @passenger_options, selected: @passengers) %></div>
+    </div>
     <div class="control"><%= form.submit "Search", class: 'button is-primary' %></div>
   <% end %>
 </div>
-
 <% if @available_flights.present? %>
-<h3 class="title is-3">Available Flights</h3>
-<form accept-charset="UTF-8" action=<%= new_booking_path %> method="get">
-  <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-  <input id="booking_tickets" name="booking[tickets]" type="hidden" value="<%= @passengers %>">
-  <% @available_flights.each do |flight| %>
-    <div>
-      <input type='radio' id='booking_flight_id' name='booking[flight_id]' value="<%= flight.id %>">
-      <label for='flight'>
-      <%= flight.departure_airport.code %> -->
-      <%= flight.arrival_airport.code %>,
-      <%= flight.start_datetime.ctime %>,
-      Flight Duration: <%= flight.flight_duration %> hours
-      </label>
-    </div>
+  <h3 class="title is-3">Available Flights Rails</h3>
+  <%= form_with scope: :booking, url: new_booking_url, method: :get do |form| %>
+    <%= form.hidden_field(:tickets, value: @passengers)%>
+    <% @available_flights.each do |flight| %>
+      <div class="field">
+        <%= form.radio_button(:flight_id, flight.id, class: 'is-checkradio') %>
+        <%= form.label("#{:flight_id}_#{flight.id}", class: 'label') do %>
+          <div class="columns is-vcentered">
+            <div class="column is-one-quarter">
+              <%= content_tag(:span, flight.departure_airport.code, class: 'has-text-weight-bold') %>
+              <br>
+              <%= content_tag(:span, "Departure", class: 'has-text-grey-light') %>
+            </div>
+            <div class="column is-one-quarter">
+              <%= content_tag(:span, flight.arrival_airport.code, class: 'has-text-weight-bold') %>
+              <br>
+              <%= content_tag(:span, "Arrival", class: 'has-text-grey-light') %>
+            </div>
+            <div class="column is-one-quarter">
+              <%= content_tag(:span, flight.start_datetime.ctime, class: 'has-text-weight-bold') %>
+              <br>
+              <%= content_tag(:span, "Departure Time", class: 'has-text-grey-light') %>
+            </div>
+            <div class="column is-one-quarter">
+              <%= content_tag(:span, flight.flight_duration, class: 'has-text-weight-bold') %>
+              <br>
+              <%= content_tag(:span, "Duration", class: 'has-text-grey-light') %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+    <div class="control"><%= form.submit "Submit", class: "button is-primary"%></div>
   <% end %>
-  <br>
-  <div class="control"><input type="submit" value="Submit" class= 'button button is-primary'></div>
-</form>
 <% end %>
