--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,16 +1,34 @@
-<h2>Booking Confirmed!</h2>
-<h3>Flight Information</h3>
-<ul>
-  <li><%= @booking.flight.start_datetime.strftime("%a, %b %d, %Y") %>
-      <b><%= @booking.flight.start_datetime.strftime("%H:%M")%></b>
-  </li>
-  <li>Duration: <%= @booking.flight.flight_duration %> hours</li>
-  <li><%= @booking.flight.departure_airport.code %> to <%= @booking.flight.arrival_airport.code %></li>
-  <li>Flight ID: <%= @booking.flight.id%></li>
-</ul>
-<h3>Passenger Information</h3>
-<ol>
-  <% @booking.passengers.each do |passenger| %>
-    <li><%= passenger.name %></li>
-  <% end %>
-</ol>
+<div class="section">
+  <div class="container">
+    <h3 class="title is-3">Booking Confirmed!</h3>
+    
+    <div class="content">
+      <h4 class="title is-4">Flight Information</h4>
+      <ul class="mb-4"> <!-- mb-4 adds margin-bottom -->
+        <li class="is-size-5">
+          <span class="has-text-weight-bold">Date & Time:</span>
+          <%= @booking.flight.start_datetime.strftime("%a, %b %d, %Y %H:%M") %>
+        </li>
+        <li class="is-size-5">
+          <span class="has-text-weight-bold">Duration:</span>
+          <%= @booking.flight.flight_duration %> hours
+        </li>
+        <li class="is-size-5">
+          <span class="has-text-weight-bold">Route:</span>
+          <%= @booking.flight.departure_airport.code %> to <%= @booking.flight.arrival_airport.code %>
+        </li>
+        <li class="is-size-5">
+          <span class="has-text-weight-bold">Flight ID:</span>
+          <%= @booking.flight.id %>
+        </li>
+      </ul>
+      
+      <h4 class="title is-4">Passenger Information</h4>
+      <ol class="mb-4"> <!-- mb-4 adds margin-bottom -->
+        <% @booking.passengers.each do |passenger| %>
+          <li class="is-size-5"><%= passenger.name %></li>
+        <% end %>
+      </ol>
+    </div>
+  </div>
+</div>
