Add gmail to mailer

--- a/app/views/passenger_mailer/flight_confirmation.text.erb
+++ b/app/views/passenger_mailer/flight_confirmation.text.erb
@@ -8,6 +8,6 @@ Flight Information:
 - Route: <%= @passenger.booking.flight.departure_airport.code %> to <%= @passenger.booking.flight.arrival_airport.code %>
 - Flight ID: <%= @passenger.booking.flight.id %>
 
-If you have any questions or need further assistance, please contact us at support@example.com.
+If you have any questions or need further assistance, please contact us at mclpious@gmail.com.
 
 Thanks
