--- a/app/views/passenger_mailer/flight_confirmation.html.erb
+++ b/app/views/passenger_mailer/flight_confirmation.html.erb
@@ -46,7 +46,7 @@
     </ul>
 
     <!-- You can add additional information here, such as contact details, boarding information, etc. -->
-    <p>If you have any questions or need further assistance, please contact us at support@example.com.</p>
+    <p>If you have any questions or need further assistance, please contact us at mclpious@gmail.com.</p>
     <p>Thanks</p>
   </div>
 </body>
